# literotica_dl2

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  test_publish.yml
src/literotica_dl2/: __about__.py  __main__.py  author.py  cli.py  literotica_dl2.py  poem.py  story.py  story_series.py  utils.py
tests/: __init__.py  conftest.py  test_author.py  test_story.py
